# Purrdora

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  test.html  vite.config.ts
packaging/: 99-purrdora.rules  com.purrdora.pkexec.policy  install.sh
scripts/: install-dev-env.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  bluetooth.rs  connectivity.rs  display.rs  driver_recommend.rs  driver_scan.rs  firmware.rs  helper.rs  input.rs  lib.rs  monitor.rs  mpris.rs  operating_mode.rs  optimizer.rs  pci_classifier.rs  pci_ids.rs  privileged.rs
src/components/: AudioMixerWidget.tsx  BottomDock.tsx  ConnectedDevicesWidget.tsx  DriversPage.tsx  GameModePage.tsx  Layout.tsx  MediaPlayerWidget.tsx  MsiCenterPage.tsx  QuickActions.tsx  ShutdownTimer.tsx  TrafficLights.tsx  VolumeSlider.tsx
src/components/ui/: InfoTooltip.tsx  MetricBar.tsx  StatusPill.tsx  badge.tsx
src/components/widgets/: CpuWidget.tsx  DisplayLayoutWidget.tsx  FirmwareUpdateList.tsx  GameStatusWidget.tsx  GpuWidget.tsx  HardwareHealthSummary.tsx  HardwareHealthWidget.tsx  HardwareStatsWidget.tsx  MsiEcWidget.tsx  NetworkWidget.tsx  OrphanDeviceList.tsx  PerformanceHistoryWidget.tsx  RamWidget.tsx  RunningGameWidget.tsx  SessionCard.tsx  SessionToolsWidget.tsx  factory.tsx  (+3 more)
src/config/: branding.ts
src/hooks/: useDebounce.ts  useIpcListener.ts  useWindowControls.ts
src/lib/: audioUtils.ts  dashboardFetchQueue.ts  resourceCache.ts
src/store/: useHardwareHealthStore.ts  useSystemStore.ts
src/types/: schema.d.ts
